tweaks to MC mass delete